--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -3,3 +3,6 @@ $white: hsl(0, 0%, 100%);
 $black: hsl(0, 0%, 0%);
 $darkGray: hsl(0, 0%, 55%);
 $veryDarkGray: hsl(0, 0%, 41%);
+
+//Font
+$bodyFontSize: 1.07142857rem; // = 15px/14
