style: add hero image backgroug-image to the dociument

--- a/styles/_globals.scss
+++ b/styles/_globals.scss
@@ -6,7 +6,9 @@
 
 body {
   font-size: $bodyFontSize;
-
+  background: url("../images/desktop/image-hero.jpg");
+  background-repeat: no-repeat;
+  background-size: contain;
   header,
   footer,
   main > section {
