--- a/styles/_header.scss
+++ b/styles/_header.scss
@@ -1,7 +1,7 @@
 @import "mixins";
 
 header {
-  background-color: black;
+  // background-color: black;
   display: flex;
   justify-content: space-between;
   margin-top: 1.5rem;
