style: transform hero h1 text and a border around it

--- a/styles/_globals.scss
+++ b/styles/_globals.scss
@@ -9,9 +9,18 @@ body {
   background: url("../images/desktop/image-hero.jpg");
   background-repeat: no-repeat;
   background-size: contain;
+  font-family: "Alata", sans-serif;
+  // font-family: "Josefin Sans", sans-serif;
+  // font-weight: 300;
+
   header,
   footer,
   main > section {
     padding: 0 8rem;
+  }
+
+  h1,
+  h2 {
+    font-family: "Josefin Sans", sans-serif;
   }
 }
