style: adjust the position on Y axe of the hero section backgroud image

--- a/styles/_header.scss
+++ b/styles/_header.scss
@@ -3,7 +3,10 @@
 header {
   display: flex;
   justify-content: space-between;
-  margin-top: 1.5rem;
-
+  // margin-top: 1.5rem;
+  position: absolute;
+  top: 1.5rem;
+  left: 0.5rem;
+  right: 0.5rem;
   @include link-default-styles;
 }
