style: add rules for the Leader interactive section

--- a/styles/_header.scss
+++ b/styles/_header.scss
@@ -9,7 +9,7 @@ header {
   right: 0.5rem;
 
   div {
-    width: 150px;
+    width: 10.714285rem; // Equivalent to 150px
     > img {
       width: 100%;
     }
