--- a/styles/_hero.scss
+++ b/styles/_hero.scss
@@ -6,7 +6,7 @@
   background-position: center;
   background-position-y: 10%;
   background-size: cover;
-  height: 65vh;
+  min-height: 80vh;
 
   h1 {
     font-size: 3rem;
