--- a/styles/_our-creation-section.scss
+++ b/styles/_our-creation-section.scss
@@ -14,6 +14,7 @@
       border: 1px solid $black;
       padding: 0.5rem 1rem;
       text-transform: uppercase;
+      font-size: 0.7rem;
     }
   }
 
