--- a/styles/_footer.scss
+++ b/styles/_footer.scss
@@ -2,6 +2,8 @@
 
 footer {
   @include link-default-styles;
+  @include logo-style(8.5rem);
+
   display: flex;
   justify-content: space-between;
   background-color: $black;
