style: add hover states on links, icons, card items

--- a/styles/_footer.scss
+++ b/styles/_footer.scss
@@ -20,6 +20,11 @@ footer {
         i:not(:last-child) {
           margin-right: 1rem;
         }
+
+        i:hover {
+          cursor: pointer;
+          text-decoration: underline;
+        }
       }
 
       .copyright {
