--- a/styles/_mixins.scss
+++ b/styles/_mixins.scss
@@ -5,6 +5,7 @@
 
     li:not(:last-child) {
       padding-right: 1.5rem;
+      position: relative;
     }
 
     a {
@@ -12,6 +13,11 @@
       text-decoration: none;
       font-weight: none;
       font-size: 0.9rem;
+
+      &:hover {
+        border-bottom-width: 5px;
+        border-bottom: 1px solid $white;
+      }
     }
   }
 }
