--- a/styles/_our-creation-section.scss
+++ b/styles/_our-creation-section.scss
@@ -19,6 +19,12 @@
       padding: 0.5rem 1rem;
       text-transform: uppercase;
       font-size: 0.7rem;
+      cursor: pointer;
+
+      &:hover {
+        background-color: $black;
+        color: $white;
+      }
     }
   }
 
@@ -34,17 +40,42 @@
       display: flex;
       align-items: flex-end;
       background-size: cover;
+      cursor: pointer;
+      position: relative;
+
+      &::before {
+        position: absolute;
+        content: "";
+        top: 0;
+        bottom: 0;
+        right: 0;
+        left: 0;
+        background-color: hsla(0, 0, 100%, 0.6);
+        opacity: 0;
+      }
+
+      &:hover h2 {
+        color: $black;
+      }
+      &:hover::before {
+        opacity: 1;
+      }
 
       h2 {
         color: $white;
         width: 60%;
         padding: 0 0 2rem 1rem;
         font-weight: 200;
+        z-index: 999;
       }
     }
 
     @for $i from 1 through length($images) {
-      $currentImage: nth($images, $i);
+      $currentImage: nth(
+        $images,
+        $i
+      ); // Retrieve image at the current iteration
+
       &__item#{$i} {
         @include card-image($currentImage);
       }
