style: manage the footer mobile version

--- a/styles/_our-creation-section.scss
+++ b/styles/_our-creation-section.scss
@@ -20,6 +20,7 @@
       text-transform: uppercase;
       font-size: 0.7rem;
       cursor: pointer;
+      transition: all 200ms ease-in-out;
 
       &:hover {
         background-color: $black;
@@ -52,13 +53,15 @@
         left: 0;
         background-color: hsla(0, 0, 100%, 0.6);
         opacity: 0;
+        transition: opacity 200ms ease-in-out;
+      }
+
+      &:hover::before {
+        opacity: 1;
       }
 
       &:hover h2 {
         color: $black;
-      }
-      &:hover::before {
-        opacity: 1;
       }
 
       h2 {
