--- a/styles/_footer.scss
+++ b/styles/_footer.scss
@@ -34,4 +34,27 @@ footer {
       }
     }
   }
+
+  @include mobile-device-styles {
+    display: flex;
+    flex-direction: column;
+
+    > div:first-child {
+      display: flex;
+      align-items: center;
+      flex-direction: column;
+      text-align: center;
+    }
+
+    > div:nth-child(2) {
+      text-align: center;
+    }
+
+    ul {
+      flex-direction: column;
+      li:not(:last-child) {
+        padding-right: 0;
+      }
+    }
+  }
 }
