--- a/styles/_mixins.scss
+++ b/styles/_mixins.scss
@@ -35,3 +35,9 @@
   background-image: $url;
   background-repeat: no-repeat;
 }
+
+@mixin mobile-device-styles {
+  @media screen and (max-width: 767px) {
+    @content;
+  }
+}
