--- a/styles/_footer.scss
+++ b/styles/_footer.scss
@@ -54,6 +54,7 @@ footer {
       flex-direction: column;
       li:not(:last-child) {
         padding-right: 0;
+        margin-bottom: 1rem;
       }
     }
   }
