--- a/styles/_our-creation-section.scss
+++ b/styles/_our-creation-section.scss
@@ -84,4 +84,47 @@
       }
     }
   }
+
+  @include mobile-device-styles {
+    // padding: 0 2rem;
+
+    > * {
+      width: 100%;
+    }
+
+    &__title {
+      text-align: center;
+      // font-weight: 200;
+      // width: 100vw !important;
+    }
+
+    &__see-all {
+      order: 3;
+      margin-top: 25px;
+      text-align: center;
+
+      span {
+        display: inline-block;
+        width: 60%;
+        text-align: center;
+      }
+    }
+
+    &__card-list {
+      grid-template-columns: 100%;
+
+      @for $i from 1 through length($imagesMobile) {
+        $currentImage: nth(
+          $images,
+          $i
+        ); // Retrieve image at the current iteration
+
+        &__item#{$i} {
+          @include card-image($currentImage);
+          width: 100%;
+          height: 10rem;
+        }
+      }
+    }
+  }
 }
