--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -17,6 +17,21 @@ $soccerTeam: url("../images/desktop/image-soccer-team.jpg");
 $nightArcade: url("../images/desktop/image-night-arcade.jpg");
 $curiosity: url("../images/desktop/image-curiosity.jpg");
 
-//List of images
+//List of desktop images
 $images: $deepEarth, $nightArcade, $soccerTeam, $grid, $fromAbove,
   $pocketBorealis, $curiosity, $fisheye;
+
+//Mobile images
+$deepEarthMobile: url("../images/mobile/image-deep-earth.jpg");
+$fisheyeMobile: url("../images/mobile/image-fisheye.jpg");
+$pocketBorealisMobile: url("../images/mobile/image-pocket-borealis.jpg");
+$fromAboveMobile: url("../images/mobile/image-from-above.jpg");
+$gridMobile: url("../images/mobile/image-grid.jpg");
+$soccerTeamMobile: url("../images/mobile/image-soccer-team.jpg");
+$nightArcadeMobile: url("../images/mobile/image-night-arcade.jpg");
+$curiosityMobile: url("../images/mobile/image-curiosity.jpg");
+
+//List of mibile images
+$imagesMobile: $deepEarthMobile, $nightArcadeMobile, $soccerTeamMobile,
+  $gridMobile, $fromAboveMobile, $pocketBorealisMobile, $curiosityMobile,
+  $fisheyeMobile;
